<resources>
    <string name="app_name">bhoang2-FuelTrack</string>
    <string name="action_settings">Settings</string>

    <!-- Text Strings -->
    <string name="text_date">Date (yyyy-mm-dd):</string>
    <string name="text_station">Station Name:</string>
    <string name="text_odometer">Odometer Reading (x.x km):</string>
    <string name="text_fuelGrade">Fuel Grade:"</string>
    <string name="text_fuelAmount">Fuel Amount (x.xxx L):</string>
    <string name="text_fuelUnitCost">Fuel Unit Cost (x.x cents/L):</string>
    <string name="text_fuelCost">Fuel Cost ($x.xx):</string>
    <string name="tap_to_edit_title">Select a log to edit it:</string>
    <string name="text_selectOption">Please selection an option:</string>

    <!-- Edit Strings -->
    <string name="edit_date">Enter a date</string>
    <string name="edit_station">Enter gas station</string>
    <string name="edit_odometer">Enter odometer reading</string>
    <string name="edit_fuel_grade">Enter fuel grade</string>
    <string name="edit_fuel_amount">Enter fuel amount</string>
    <string name="edit_fuel_unit_cost">Enter fuel unit cost</string>
    <string name="edit_fuel_cost">Enter fuel cost</string>

    <!-- Button Strings -->
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_edit">Edit</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_newEntry">Add New Entry</string>
    <string name="button_viewEntries">View Log Entries</string>
    <string name="button_clear_entries">Clear All Log Entries</string>
</resources>
