<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context="bruce_hoang.bhoang2_fueltrack.newEntryActivity"
    android:id="@+id/newEntryActivity">

    <!-- All the texts/fields -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/add"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_date"
            android:id="@+id/text_date"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_date"
            android:inputType="date"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_station"
            android:id="@+id/textView_Station"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_station"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_odometer"
            android:id="@+id/textView_Odometer"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_odometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_odometer"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_fuelGrade"
            android:id="@+id/textView_fuelGrade"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_fuel_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_fuel_grade"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_fuelAmount"
            android:id="@+id/textView_fuelAmount"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/edit_fuel_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_fuel_amount"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_fuelUnitCost"
            android:id="@+id/textView_fuelUnitCost"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/edit_fuel_unit_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_fuel_unit_cost"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/text_fuelCost"
            android:id="@+id/textView_fuelCost"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edit_fuel_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/edit_fuel_cost"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>
    </LinearLayout>

    <!-- Button -->
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="54dp"
        android:paddingRight="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout" />

</RelativeLayout>
